--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <img src="./images/loc.jpg" alt="" class="locatin-map">
             <a href="https://www.google.com/maps/place/Hotel+HARNAŚ+dla+dorosłych+z+widokiem+na+Tatry/@49.3319127,20.0903578,17z/data=!3m1!4b1!4m9!3m8!1s0x4715f6ab7a903ac1:0xdfa8a68cc0a3472a!5m2!4m1!1i2!8m2!3d49.3319127!4d20.0903578!16s%2Fg%2F1tfh3c_f?entry=ttu&g_ep=EgoyMDI1MDcyMi4wIKXMDSoASAFQAw%3D%3D"
                 target="_blank"> <button class="locatin-btn">Переглянути на мапі</button></a>
-
+                <p class="dec">---------------♥---------------</p>
         </div>
         <div class="details">
             <h2>Деталі</h2>
@@ -62,6 +62,7 @@
                 <div class="color four"></div>
                 <div class="color five"></div>
               </div>
+              
             </div>
 
         </div>
