--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     прекрасним початком нашого щасливого
                     життя.</p>
                 <img src="./images/cal.jpg" alt="" class="calendar">
-                <p class="dec">---------------♥---------------</p>
+                <p class="dec">---------------🖤---------------</p>
         </div>
         <div class="locatin">
             <h3>Локація</h3>
@@ -33,21 +33,21 @@
             <img src="./images/loc.jpg" alt="" class="locatin-map">
             <a href="https://www.google.com/maps/place/Hotel+HARNAŚ+dla+dorosłych+z+widokiem+na+Tatry/@49.3319127,20.0903578,17z/data=!3m1!4b1!4m9!3m8!1s0x4715f6ab7a903ac1:0xdfa8a68cc0a3472a!5m2!4m1!1i2!8m2!3d49.3319127!4d20.0903578!16s%2Fg%2F1tfh3c_f?entry=ttu&g_ep=EgoyMDI1MDcyMi4wIKXMDSoASAFQAw%3D%3D"
                 target="_blank"> <button class="locatin-btn">Переглянути на мапі</button></a>
-                <p class="dec">---------------♥---------------</p>
+                <p class="dec">---------------🖤---------------</p>
         </div>
         <div class="details">
             <h2>Деталі</h2>
             <div class="details-cont">
                 <p>Просимо вас не дарувати нам квіти, ми
                     не встигнемо насолодитися їх красою.</p>
-                <p>♥</p>
+                <p>🖤</p>
                 <p>Приємним компліментом для нас буде,
                     якщо ви замість квітів вирішите
                     подарувати нам пляшку алкогольного
                     напою для нашої колекції, яку ми
                     відкриємо на найближчому нашому, ди к
                     сумісному святі.</p>
-                <p>♥</p>
+                <p>🖤</p>
                 <p>Нам буде дуже приємно, якщо ви
                     підтримаєте атмосферу нашого свята
                     своїм образом. Ми обрали ніжну та
