--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     Ми щиро віримо, що цей день стане
                     прекрасним початком нашого щасливого
                     життя.</p>
-                <img src="./images/cal.jpg" alt="" class="calendar">
+                <img src="./images/cal1.jpg" alt="" class="calendar">
                 <p class="dec">---------------🖤---------------</p>
         </div>
         <div class="locatin">
@@ -30,7 +30,7 @@
             <p>Наше свято відбудеться у готелі "Hotel HARNAŚ". Ми з нетерпінням чекаємо на вашу
                 присутність, щоб зробити цей день ще більш особливим.
             </p>
-            <img src="./images/loc.jpg" alt="" class="locatin-map">
+            <img src="./images/loc1.jpg" alt="" class="locatin-map">
             <a href="https://www.google.com/maps/place/Hotel+HARNAŚ+dla+dorosłych+z+widokiem+na+Tatry/@49.3319127,20.0903578,17z/data=!3m1!4b1!4m9!3m8!1s0x4715f6ab7a903ac1:0xdfa8a68cc0a3472a!5m2!4m1!1i2!8m2!3d49.3319127!4d20.0903578!16s%2Fg%2F1tfh3c_f?entry=ttu&g_ep=EgoyMDI1MDcyMi4wIKXMDSoASAFQAw%3D%3D"
                 target="_blank"> <button class="locatin-btn">Переглянути на мапі</button></a>
                 <p class="dec">---------------🖤---------------</p>
@@ -45,15 +45,15 @@
                     якщо ви замість квітів вирішите
                     подарувати нам пляшку алкогольного
                     напою для нашої колекції, яку ми
-                    відкриємо на найближчому нашому, ди к
+                    відкриємо на найближчому нашому, 
                     сумісному святі.</p>
                 <p>🖤</p>
                 <p>Нам буде дуже приємно, якщо ви
                     підтримаєте атмосферу нашого свята
                     своїм образом. Ми обрали ніжну та
-                    Київ вишукану кольорову палітру.
+                    вишукану кольорову палітру.
                     Просимо вас орієнтуватися на ці
-                    е відтінки у вашому святковому вбранні:
+                    відтінки у вашому святковому вбранні:
                 </p>
               <div class="colors">
                 <div class="color one"></div>
