--- a/index.html
+++ b/index.html
@@ -9,23 +9,23 @@
 </head>
 
 <body>
-    <header class="header">
+    <header class="header hidden-text">
         <div class="header">
             <h2>17.09.2025</h2>
             <h1>Daria & Bohdan</h1>
         </div>
     </header>
     <main>
-        <div class="appeal">
-            <h2>ДОРОГІ ГОСТІ!</h1>
-                <p>У нашому житті станеться надзвичайно важлива подія - наше весілля!
+        <div class="appeal ">
+            <h2 class="hidden-text">ДОРОГІ ГОСТІ!</h1>
+                <p class="hidden-text">У нашому житті станеться надзвичайно важлива подія - наше весілля!
                     Ми щиро віримо, що цей день стане
                     прекрасним початком нашого щасливого
                     життя.</p>
-                <img src="./images/cal1.jpg" alt="" class="calendar">
+                <img src="./images/cal1.jpg" alt="" class="calendar hidden-text">
                 <p class="dec">---------------🖤---------------</p>
         </div>
-        <div class="locatin">
+        <div class="locatin hidden-text">
             <h3>Локація</h3>
             <p>Наше свято відбудеться у готелі "Hotel HARNAŚ". Ми з нетерпінням чекаємо на вашу
                 присутність, щоб зробити цей день ще більш особливим.
@@ -35,7 +35,7 @@
                 target="_blank"> <button class="locatin-btn">Переглянути на мапі</button></a>
                 <p class="dec">---------------🖤---------------</p>
         </div>
-        <div class="details">
+        <div class="details hidden-text">
             <h2>Деталі</h2>
             <div class="details-cont">
                 <p>Просимо вас не дарувати нам квіти, ми
@@ -55,7 +55,7 @@
                     Просимо вас орієнтуватися на ці
                     відтінки у вашому святковому вбранні:
                 </p>
-              <div class="colors">
+              <div class="colors hidden-text">
                 <div class="color one"></div>
                 <div class="color two"></div>
                 <div class="color three"></div>
@@ -67,11 +67,12 @@
 
         </div>
     </main>
-    <footer class="footer">
+    <footer class="footer hidden-text">
         <h2>Святкуйте з Нами!</h2>
         <p>Daria & Bohdan</p>
         <h3>Чекаємо на вас</h3>
     </footer>
+    <script src="index.js"></script>
 </body>
 
 </html>
