--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 </head>
 
 <body>
-    <header class="header hidden-text">
+    <header class="header hidden-img ">
         <div class="header">
-            <h2>17.09.2025</h2>
-            <h1>Daria & Bohdan</h1>
+            <h2 class="hidden-text">17.09.2025</h2>
+            <h1 class="hidden-text">Daria & Bohdan</h1>
         </div>
     </header>
     <main>
@@ -25,15 +25,15 @@
                 <img src="./images/cal1.jpg" alt="" class="calendar hidden-text">
                 <p class="dec">---------------🖤---------------</p>
         </div>
-        <div class="locatin hidden-text">
-            <h3>Локація</h3>
-            <p>Наше свято відбудеться у готелі "Hotel HARNAŚ". Ми з нетерпінням чекаємо на вашу
+        <div class="locatin">
+            <h3 class="hidden-text">Локація</h3>
+            <p class="hidden-text">Наше свято відбудеться у готелі "Hotel HARNAŚ". Ми з нетерпінням чекаємо на вашу
                 присутність, щоб зробити цей день ще більш особливим.
             </p>
-            <img src="./images/loc1.jpg" alt="" class="locatin-map">
+            <img src="./images/loc1.jpg" alt="" class="locatin-map hidden-text">
             <a href="https://www.google.com/maps/place/Hotel+HARNAŚ+dla+dorosłych+z+widokiem+na+Tatry/@49.3319127,20.0903578,17z/data=!3m1!4b1!4m9!3m8!1s0x4715f6ab7a903ac1:0xdfa8a68cc0a3472a!5m2!4m1!1i2!8m2!3d49.3319127!4d20.0903578!16s%2Fg%2F1tfh3c_f?entry=ttu&g_ep=EgoyMDI1MDcyMi4wIKXMDSoASAFQAw%3D%3D"
-                target="_blank"> <button class="locatin-btn">Переглянути на мапі</button></a>
-                <p class="dec">---------------🖤---------------</p>
+                target="_blank " class="hidden-text"> <button class="locatin-btn">Переглянути на мапі</button></a>
+            <p class="dec">---------------🖤---------------</p>
         </div>
         <div class="details hidden-text">
             <h2>Деталі</h2>
@@ -45,7 +45,7 @@
                     якщо ви замість квітів вирішите
                     подарувати нам пляшку алкогольного
                     напою для нашої колекції, яку ми
-                    відкриємо на найближчому нашому, 
+                    відкриємо на найближчому нашому,
                     сумісному святі.</p>
                 <p>🖤</p>
                 <p>Нам буде дуже приємно, якщо ви
@@ -55,22 +55,25 @@
                     Просимо вас орієнтуватися на ці
                     відтінки у вашому святковому вбранні:
                 </p>
-              <div class="colors hidden-text">
-                <div class="color one"></div>
-                <div class="color two"></div>
-                <div class="color three"></div>
-                <div class="color four"></div>
-                <div class="color five"></div>
-              </div>
-              
+                <div class="colors hidden-text">
+                    <div class="color one"></div>
+                    <div class="color two"></div>
+                    <div class="color three"></div>
+                    <div class="color four"></div>
+                    <div class="color five"></div>
+
+                </div>
+
             </div>
 
         </div>
     </main>
-    <footer class="footer hidden-text">
-        <h2>Святкуйте з Нами!</h2>
-        <p>Daria & Bohdan</p>
-        <h3>Чекаємо на вас</h3>
+    <footer class="footer  hidden-img">
+  
+            <h2 class="hidden-text">Святкуйте з Нами!</h2>
+            <p class="hidden-text"> Daria & Bohdan</p>
+            <h3 class="hidden-text">Чекаємо на вас</h3>
+
     </footer>
     <script src="index.js"></script>
 </body>
