--- a/index.html
+++ b/index.html
@@ -38,15 +38,12 @@
         <div class="details hidden-text">
             <h2>Деталі</h2>
             <div class="details-cont">
-                <p>Просимо вас не дарувати нам квіти, ми
-                    не встигнемо насолодитися їх красою.</p>
+                <p>Якщо ви захочете прийти з квітами — не стримуйте себе, ми їх дуже любимо і обіцяємо насолодитися
+                    кожною пелюсткою!
+                </p>
                 <p>🖤</p>
-                <p>Приємним компліментом для нас буде,
-                    якщо ви замість квітів вирішите
-                    подарувати нам пляшку алкогольного
-                    напою для нашої колекції, яку ми
-                    відкриємо на найближчому нашому,
-                    сумісному святі.</p>
+                <p>А якщо вам ближче інший варіант, наприклад пляшка улюбленого напою для нашої майбутньої, спільної
+                    колекції, це стане чудовим компліментом. Вона обов’язково дочекається особливої нагоди.</p>
                 <p>🖤</p>
                 <p>Нам буде дуже приємно, якщо ви
                     підтримаєте атмосферу нашого свята
@@ -69,10 +66,10 @@
         </div>
     </main>
     <footer class="footer  hidden-img">
-  
-            <h2 class="hidden-text">Святкуйте з Нами!</h2>
-            <p class="hidden-text"> Daria & Bohdan</p>
-            <h3 class="hidden-text">Чекаємо на вас</h3>
+
+        <h2 class="hidden-text">Святкуйте з Нами!</h2>
+        <p class="hidden-text"> Daria & Bohdan</p>
+        <h3 class="hidden-text">Чекаємо на вас</h3>
 
     </footer>
     <script src="index.js"></script>
