--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
         </div>
         <div class="locatin">
             <h3 class="hidden-text">Локація</h3>
-            <p class="hidden-text">Наше свято відбудеться у готелі "Hotel HARNAŚ". Ми з нетерпінням чекаємо на вашу
+            <p class="hidden-text">Наше свято відбудеться у готелі "Pałac Czosnowskich". Ми з нетерпінням чекаємо на вашу
                 присутність, щоб зробити цей день ще більш особливим.
             </p>
-            <img src="./images/loc1.jpg" alt="" class="locatin-map hidden-text">
-            <a href="https://www.google.com/maps/place/Hotel+HARNAŚ+dla+dorosłych+z+widokiem+na+Tatry/@49.3319127,20.0903578,17z/data=!3m1!4b1!4m9!3m8!1s0x4715f6ab7a903ac1:0xdfa8a68cc0a3472a!5m2!4m1!1i2!8m2!3d49.3319127!4d20.0903578!16s%2Fg%2F1tfh3c_f?entry=ttu&g_ep=EgoyMDI1MDcyMi4wIKXMDSoASAFQAw%3D%3D"
+            <img src="./images/loc.jpg" alt="" class="locatin-map hidden-text">
+            <a href="https://www.google.com/maps/place/Mazowiecka+163,+05-825+Opypy,+Польща/data=!4m2!3m1!1s0x471948701da743cd:0xd14b4db12f63d36e?sa=X&ved=1t:242&ictx=111"
                 target="_blank " class="hidden-text"> <button class="locatin-btn">Переглянути на мапі</button></a>
             <p class="dec">---------------🖤---------------</p>
         </div>
