--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     своїм образом. Ми обрали ніжну та
                     вишукану кольорову палітру.
                     Просимо вас орієнтуватися на ці
-                    відтінки у вашому святковому вбранні:
+                    відтінки у вашому святковому вбранні (білий колір лише для чоловіків у вигляді рубашки):
                 </p>
                 <div class="colors hidden-text">
                     <div class="color one"></div>
